--- a/ker_hardware_interface/CMakeLists.txt
+++ b/ker_hardware_interface/CMakeLists.txt
@@ -101,10 +101,10 @@ find_package(catkin REQUIRED COMPONENTS
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
-  INCLUDE_DIRS include
+#  INCLUDE_DIRS include
 #  LIBRARIES ker_hardware_interface
-#  CATKIN_DEPENDS roscpp
-#  DEPENDS system_lib
+  CATKIN_DEPENDS roscpp
+  DEPENDS system_lib
 )
 
 ###########
